# sponsorship-copilot-api-public

./: .env  .env.example  Makefile  README.md  Sponsorship_Copilot_Walkthrough.ipynb  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile
backend/app/: main.py  schemas.py
backend/app/api/routes/: outreach.py  seed.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/services/: llm_client.py  outreach_pack.py  seed_fake_data.py
sql/: 001_init.sql
